--- a/_config.yml
+++ b/_config.yml
@@ -114,7 +114,7 @@ analytics:
 # Site Author
 author:
   name             : "Mark Agib"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/profile.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I like learning about physics, ml, and math."
   location         : "Yorba Linda, CA"
   email            : 
